packages/kit/test/apps/basics/src/routes/errors/load-error-server.svelte
<script context="module">
	/** @type {import('@dishuostec/kit').Load} */
	export async function load() {
		return { status: 555, error: new Error('Not found') };
	}
</script>
